2008-02-11  Sanel <karijes@users.sourceforge.net>

	* In Config.cpp made static functions that are visible only inside
	this file
	* In Jamrules removed EXEMODE from installation; jam by default set it to
	711

2008-02-10  Sanel <karijes@users.sourceforge.net>

	* Resource will not add '/ede/' to XDG paths. This should be set via XDG
	env variables
	* Modified Resource test too
	* Removed old comment from color_fltk_to_rgb
	* Made static hex2int() in Color.cpp

2008-02-09  Sanel <karijes@users.sourceforge.net>

	* Some Config output formating tuning
	* Added Resource class
	* Fixed documentation tag in Regex.h

2008-02-02  Sanel <karijes@users.sourceforge.net>

	* Added replace(char, char) in String with tests

2008-02-01  Sanel <karijes@users.sourceforge.net>

	* Improved font chooser both in dialog and font scanning. Dialog contains
	'styles' for regular/bold/italic/... and font scanning will try to group
	fonts into families. It is not perfect since can miss some fonts,
	especailly when there are a huge number of fonts, yielding that regular
	points to bold face or similar, but I don't know can it be better due bad
	FLTK font list engine
	* Added small test for font chooser

2008-01-20  Sanel <karijes@users.sourceforge.net>

	* First changelog entry in 2008 !!! ;)
	* Fixed crashing in font chooser 
	* Completed (at some point) font chooser documentation
	* Added default_name and default_size as parameters for font_chooser()
	function

2007-12-12  Sanel <karijes@users.sourceforge.net>

	* Added Missing.{h,c} with various functions that are missing on other
	unix'es beside linux
	* Added some #ifdefs for __restrict_arr in rx/regex.h since older gcc
	versions will not correctly resolve 'regmatch_t __pmatch[__restrict_arr]'
	construct

2007-12-07  Sanel <karijes@users.sourceforge.net>
	
	* Removed check for awk
	* Removed check for kqueue

2007-12-06  Sanel <karijes@users.sourceforge.net>

	* Use LocalDepends and LocalClean in Jamrules